[package]
name = "adventofcode-rs"
version = "0.1.0"
edition = "2021"
authors = ["Abdelhamid Bakhta <@abdelhamidbakhta>"]
description = "Advent of Code 2022 solutions in Rust 🦀"
homepage = "https://github.com/abdelhamidbakhta/adventofcode-rs"
repository = "https://github.com/abdelhamidbakhta/adventofcode-rs"
readme = "./README.md"
license = "MIT"
default-run = "day01-1"

[dependencies]
env_logger = "0.10.0"
eyre = "0.6.8"
log = "0.4.17"
